--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <div class="glass">
         <div class="glass-img">
-            <img src="C:\Users\vinish\OneDrive\Documents\pic.png">
+            <img src="pic.png">
         </div>
         <div class="desc">
             <h6 class="primary-text"><b>Sunku Vinish Ranganath</b></h6>
