--- a/NewRes.html
+++ b/NewRes.html
@@ -30,6 +30,10 @@
                         <span class="icon"><i class="fa fa-linkedin-square" aria-hidden="true"></i></span>
                         <span class="text"><a style="text-decoration: none; color: white;" href="https://www.linkedin.com/in/svinish-06b389229">https://www.linkedin.com/in/svinish-06b389229</a></span>
                     </li>
+                    <li>
+                        <span class="icon"><i class="fa fa-github" aria-hidden="true"></i></span>
+                        <span class="text"><a style="text-decoration: none; color: white;" href="https://github.com/codevin-projects">https://github.com/codevin-projects</a></span>
+                    </li>
                 </ul>
             </div>
             <div class="skset">
