--- a/NewRes.html
+++ b/NewRes.html
@@ -9,7 +9,7 @@
     <div class="glass">
         <div class="left_Side">
             <div class="protext">
-                <h2><br/><b>SUNKU VINISH RANGANATH</b></h2><span>Software Developer</span>
+                <h2><br/><b>SUNKU VINISH RANGANATH</b></h2><span>Web & Software Developer</span>
             </div>
             <div class="perpro">
                 <h3 class="title">PERSONAL PROFILE</h3>
@@ -28,11 +28,11 @@
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-linkedin-square" aria-hidden="true"></i></span>
-                        <span class="text"><a style="text-decoration: none; color: white;" href="https://www.linkedin.com/in/svinish-06b389229">https://www.linkedin.com/in/svinish-06b389229</a></span>
+                        <span class="text"><a style="text-decoration: none; color: black;" href="https://www.linkedin.com/in/svinish-06b389229">https://www.linkedin.com/in/svinish-06b389229</a></span>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-github" aria-hidden="true"></i></span>
-                        <span class="text"><a style="text-decoration: none; color: white;" href="https://github.com/codevin-projects">https://github.com/codevin-projects</a></span>
+                        <span class="text"><a style="text-decoration: none; color: black;" href="https://github.com/codevin-projects">https://github.com/codevin-projects</a></span>
                     </li>
                 </ul>
             </div>
