--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
         <div class="glass-img">
             <img src="pic.png">
         </div>
-        <div class="desc">
-            <h6 class="primary-text"><b>Sunku Vinish Ranganath</b></h6>
-            <h6 class="secondary-text">Web Developer</h6>
+        <div class="card">
+            <h6 class="text1"><b>Sunku Vinish Ranganath</b></h6>
+            <h6 class="text2">Web Developer</h6>
         </div>
-        <button class="primary-text"><a href="NewRes.html">View Resume</a></button>
+        <button class="text1"><a href="NewRes.html">View Resume</a></button>
 </div>
 </body>
 </html>
