--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         </div>
         <div class="card">
             <h6 class="text1"><b>Sunku Vinish Ranganath</b></h6>
-            <h6 class="text2">Web Developer</h6>
+            <h6 class="text2">Web & Software Developer</h6>
         </div>
         <button class="text1"><a href="NewRes.html">View Resume</a></button>
-</div>
+    </div>
 </body>
 </html>
