--- a/NewRes.html
+++ b/NewRes.html
@@ -9,7 +9,7 @@
     <div class="glass">
         <div class="left_Side">
             <div class="protext">
-                <h2><br/><b>SUNKU VINISH RANGANATH</b></h2><span>Web & Software Developer</span>
+                <h2><br/><b>SUNKU VINISH RANGANATH</b></h2><span>Full stack Developer</span>
             </div>
             <div class="perpro">
                 <h3 class="title">PERSONAL PROFILE</h3>
