--- a/NewRes.html
+++ b/NewRes.html
@@ -195,6 +195,24 @@
                         </ul>
                 </div>
             </div>
+            <div class="proj">
+                <h3 class="title">ACHIEVEMENTS</h3>
+                <div class="text">
+                    <ul>
+                        <li> 
+                            <span><b>Personal site</b><br/></span>
+                            <span><a class="reflink" href="https://codevin-projects.github.io/pro-code1/">A small webpage which showcases my resume using Html & CSS</a></span>
+                        </li>
+                        <li>
+                            <span><b>Text to Speech</b><br/></span>
+                            <span><a class="reflink" href="">A webpage which is used to convert text to speech, which is crested by using HTML & py-script</a></span>
+                        </li>
+                        <li>
+                            <span><b></b></span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
             <div class="drn">
                 <h3 class="title">DECLARATION</h3>
                 <div class="ptext">
